<package>
<name>ros_profiling</name>
<description>ros-packet</description>
<maintainer email="dantard@unizar.es">Danilo Tardioli</maintainer>
<version>1.1.0</version>
<author>Danilo Tardioli, dantard@unizar.es</author>
<license>GPL v2 </license>
<buildtool_depend>catkin</buildtool_depend>
<build_depend>message_generation</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>ros_profiling_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>libpcap</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>tf</build_depend>
<build_depend>roscpp_serialization</build_depend>
<build_depend>roscpp_tutorials</build_depend>
<run_depend>ros_profiling_msgs</run_depend>
<run_depend>roscpp</run_depend>
<run_depend>roscpp_serialization</run_depend>
<run_depend>roscpp_tutorials</run_depend>
<run_depend>geometry_msgs</run_depend>

</package>


